deployment/k8s.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrybabies
  namespace: olivia
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-host: scrybabies.vendrus.teamfrag.net
    ingress.kubernetes.io/ssl-redirect: 'true'
    ingress.kubernetes.io/ssl-temporary-redirect: 'true'
    kubernetes.io/ingress.allow-http: 'false'
spec:
  tls:
    - hosts:
        - scrybabies.vendrus.teamfrag.net
      secretName: scrybabies-tls
  rules:
    - host: scrybabies.vendrus.teamfrag.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scrybabies
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: scrybabies
  namespace: olivia
  labels:
    app.kubernetes.io/name: scrybabies
    app.kubernetes.io/component: frontend
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: scrybabies
    app.kubernetes.io/component: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrybabies
  namespace: olivia
  labels:
    app.kubernetes.io/name: scrybabies
    app.kubernetes.io/component: frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: scrybabies
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: scrybabies
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/vendrussci/scrybabies:2.2.0
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
